[tool.poetry]
name = "pubmed_fetcher"
version = "0.1.0"
description = "Fetch and filter PubMed research papers"
authors = ["Srikar1538983 <srikaryerroju001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
click = "^8.1.3"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
